added dependencies: ["gas-library-java","advanced-content-info"] fixes missing or disabled dependencies error