@@ -1,26 +1,11 @@
-apply plugin: "java"
-
-version '1.0'
-
-
-//sourceSets.main.java.srcDirs = ["core/starter/"]
-//sourceSets.main.resources.srcDirs = ["core/resources/"]
-
-repositories {
-    mavenCentral()
-    maven { url 'https://www.jitpack.io' }
-}
 buildscript {
     ext {
-//        arcHash='b8db131172548e1f10ba86392e09819c34296711'
         arcHash = '128'
         mindustryVersion = 'v129.1'
         mindustryVersionAnnotations = 'v126.2'
-        arcModule = { String name ->
-            //skip to last submodule
-            if (name.contains(':')) name = name.split(':').last()
-            return "com.github.Anuken.Arc:$name:$arcHash"
-        }
+        aciVersion = 'v1'
+        gassesVersion = 'v1.1'
+        modsDirectory="classic"
     }
     repositories {
         mavenLocal()
@@ -31,19 +16,22 @@ buildscript {
     }
 
     dependencies {
-        classpath fileTree(dir: 'libs', include: ['*.jar'])
-        classpath 'commons-io:commons-io:2.5'
-        classpath 'com.mobidevelop.robovm:robovm-gradle-plugin:2.3.11'
         classpath "com.github.anuken:packr:-SNAPSHOT"
 //        classpath "com.github.Anuken.Arc:packer:$mindustryVersion"
-        classpath arcModule("packer")
-        classpath arcModule("g3d")
+        classpath "com.github.Anuken.Arc:arc-core:$mindustryVersion"
         classpath "com.github.Anuken.Arc:arc-core:$mindustryVersion"
         classpath "com.github.Anuken.Mindustry:annotations:$mindustryVersionAnnotations"
         classpath "com.github.Anuken.Mindustry:core:$mindustryVersion"
         classpath "com.github.Anuken.Mindustry:tools:$mindustryVersion"
         classpath "com.github.Anuken.Arc:packer:$arcHash"
+        classpath "com.github.Zelaux:AdvancedContentInfo:$aciVersion"
+//        classpath "com.github.Zelaux.GasLibrary:core:$gassesVersion"
     }
+}
+plugins {
+    id 'org.jetbrains.kotlin.jvm' version '1.4.32'
+    id "org.jetbrains.kotlin.kapt" version "1.4.32"
+    id 'groovy'
 }
 ext {
     //the build number that this mod is made for
@@ -55,30 +43,34 @@ ext {
         def proc = cmd.execute(null, new File("$buildDir/libs"))
         proc.waitForProcessOutput(System.out, System.err)
     }
-    arcModule = { String name ->
-        //skip to last submodule
-        if (name.contains(':')) name = name.split(':').last()
-        return "com.github.Anuken.Arc:$name:$arcHash"
-    }
-}
-dependencies {
-    compileClasspath fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'commons-io:commons-io:2.5'
-//    compile project(":core")
-//    implementation project(":core")
-    implementation arcModule('arc-core')
-    implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
-    implementation "com.github.Anuken.Mindustry:annotations:$mindustryVersionAnnotations"
-    implementation "com.github.Anuken.Mindustry:tools:$mindustryVersion"
-    implementation 'com.squareup:javapoet:1.12.1'
-
 }
 
-
+version '1.0'
 allprojects {
-    tasks.withType(JavaCompile) {
-        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-            options.compilerArgs.addAll(['--release', '8'])
+    apply plugin: 'groovy'
+
+//    version = 'release'
+    group = 'com.github.Zelaux'
+    ext {
+        arcModule = { String name ->
+            //skip to last submodule
+            if (name.contains(':')) name = name.split(':').last()
+            return "com.github.Anuken.Arc:$name:$arcHash"
+        }
+        writeProcessors = {
+            new File(rootDir, "annotations/src/main/resources/META-INF/services/").mkdirs()
+            def processorFile = new File(rootDir, "annotations/src/main/resources/META-INF/services/javax.annotation.processing.Processor")
+            def text = new StringBuilder()
+            def files = new File(rootDir, "annotations/src/main/java")
+            files.eachFileRecurse(
+                    groovy.io.FileType.FILES
+            ) { file ->
+                if (file.name.endsWith(".java") && (file.text.contains(" extends ModBaseProcessor") || (file.text.contains(" extends AbstractProcessor") && !file.text.contains("abstract class")))) {
+                    text.append(file.path.substring(files.path.length() + 1)).append("\n")
+                }
+            }
+
+            processorFile.text = text.toString().replace(".java", "").replace("/", ".").replace("\\", ".")
         }
     }
     apply plugin: 'maven-publish'
@@ -89,99 +81,54 @@ allprojects {
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://oss.sonatype.org/content/repositories/releases/" }
         maven { url 'https://jitpack.io' }
-        jcenter()
     }
     tasks.withType(JavaCompile) {
-        targetCompatibility = 14
-        sourceCompatibility = 8
+        targetCompatibility = 8
+        sourceCompatibility = JavaVersion.VERSION_16
         options.encoding = "UTF-8"
         options.compilerArgs += ["-Xlint:deprecation"]
+
+        options.forkOptions.jvmArgs.addAll([
+                '--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED',
+                '--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED'
+        ])
     }
 }
+
 
 configure(project(":annotations")) {
     tasks.withType(JavaCompile) {
         targetCompatibility = 8
         sourceCompatibility = 8
+        options.fork = true
     }
 }
 
 //compile with java 8 compatibility for everything except the annotation project
 configure(subprojects - project(":annotations")) {
     tasks.withType(JavaCompile) {
-        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-            options.compilerArgs.addAll(['--release', '8', '--enable-preview'])
-        }
-
-        doFirst {
-            options.compilerArgs = options.compilerArgs.findAll { it != '--enable-preview' }
-        }
+        options.compilerArgs.addAll(['--release', '8'])
     }
 
     tasks.withType(Javadoc) {
         options {
             addStringOption('Xdoclint:none', '-quiet')
-            addBooleanOption('-enable-preview', true)
-            addStringOption('-release', '8')
-            addStringOption('-source', '14')
+            addStringOption('-release', '16')
         }
     }
 }
 
-project(":annotations") {
-    tasks.withType(JavaCompile) {
-        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-            options.compilerArgs.addAll(['--release', '14'])
-        }
-    }
-    apply plugin: 'maven-publish'
-    repositories {
-        mavenLocal()
-        mavenCentral()
-        maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
-        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
-        maven { url 'https://jitpack.io' }
-        jcenter()
-    }
-    apply plugin: "java-library"
-    dependencies {
-//        implementation "com.sun"
-        implementation arcModule('arc-core')
-//        compileOnly project(":core")
-        implementation "com.github.Anuken.Mindustry:annotations:$mindustryVersionAnnotations"
-        implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
-        implementation "com.github.Anuken.Mindustry:tools:$mindustryVersion"
-//                if(name!="tools")compile  project(":tools")
-//        implementation  project(":core")
-
-        apply plugin: "java"
-        compile 'com.squareup:javapoet:1.12.1'
-//        implementation "com.github.Anuken.Mindustry:entities:$mindustryVersion"
-    }
-}
-configure(project(":core")) {
-
-    tasks.withType(JavaCompile) {
-        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-            options.compilerArgs.addAll(['--release', '8'])
-        }
-        sourceCompatibility = 8
-        targetCompatibility = 8
-        doFirst {
-//            options.compilerArgs = options.compilerArgs.findAll { it != '--enable-preview' }
-        }
-    }
-
-    tasks.withType(Javadoc) {
-        options {
-//            addStringOption('Xdoclint:none', '-quiet')
-            addStringOption('-release', '8')
-        }
-    }
-
-}
 project(":core") {
     apply plugin: "java-library"
+    apply plugin: "kotlin"
+    apply plugin: "kotlin-kapt"
+
+    kapt {
+        javacOptions {
+            option("-source", "16")
+            option("-target", "1.8")
+        }
+    }
 
     compileJava.options.fork = true
 
@@ -189,30 +136,47 @@ project(":core") {
         outputs.upToDateWhen { false }
 //        generateLocales()
 //        writeVersion()
-//        writeProcessors()
+        writeProcessors()
 //        writePlugins()
     }
 
     task copyChangelog {
     }
+    task sourcesJar(type: Jar, dependsOn: classes) {
+        archiveClassifier = 'sources'
+        from sourceSets.main.allSource
+    }
 
+    task assetsJar(type: Jar, dependsOn: ":tools:pack") {
+        archiveClassifier = 'assets'
+        from files("assets") {
+            exclude "config", "cache", "music", "sounds"
+        }
+    }
+    artifacts {
+        archives sourcesJar
+        archives assetsJar
+    }
     dependencies {
         compileJava.dependsOn(preGen)
 
-        api "org.lz4:lz4-java:1.4.1"
-        implementation arcModule("arc-core")
-        implementation arcModule("extensions:freetype")
-        implementation arcModule("extensions:g3d")
-        implementation arcModule("extensions:fx")
-        implementation arcModule("extensions:arcnet")
+        api "org.lz4:lz4-java:1.7.1"
+        api arcModule("arc-core")
+        api arcModule("extensions:flabel")
+        api arcModule("extensions:freetype")
+        api arcModule("extensions:g3d")
+        api arcModule("extensions:fx")
+        api arcModule("extensions:arcnet")
 //        compileOnly "com.github.Anuken.Mindustry:entities:$mindustryVersion"
         implementation "com.github.Anuken.Mindustry:annotations:$mindustryVersionAnnotations"
         implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
         implementation "com.github.Anuken.Mindustry:tools:$mindustryVersion"
-//        api "com.github.Anuken:rhino:$rhinoVersion"
+        implementation "com.github.Zelaux:AdvancedContentInfo:$aciVersion"
+        implementation "com.github.Zelaux.GasLibrary:core:$gassesVersion"
 
+        annotationProcessor 'com.github.Anuken:jabel:34e4c172e65b3928cd9eabe1993654ea79c409cd'
         compileOnly project(":annotations")
-        annotationProcessor project(":annotations")
+        kapt project(":annotations")
 //        annotationProcessor 'com.github.Anuken:jabel:34e4c172e65b3928cd9eabe1993654ea79c409cd'
 
     }
@@ -244,25 +208,6 @@ project(":core") {
         exclude("braindustry/entities/compByAnuke/**")
     }
 }
-
-configure(project(":tools")) {
-
-    tasks.withType(JavaCompile) {
-        if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
-            options.compilerArgs.addAll(['--release', '14'])
-        }
-
-        doFirst {
-//            options.compilerArgs = options.compilerArgs.findAll { it != '--enable-preview' }
-        }
-    }
-    tasks.withType(Javadoc) {
-        options {
-//            addStringOption('Xdoclint:none', '-quiet')
-            addStringOption('-release', '14')
-        }
-    }
-}
 project(":tools") {
     apply plugin: "java"
     repositories {
@@ -279,11 +224,17 @@ project(":tools") {
         implementation "com.github.Anuken.Mindustry:annotations:$mindustryVersionAnnotations"
         implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
         implementation "com.github.Anuken.Mindustry:tools:$mindustryVersion"
-        compile arcModule("natives:natives-desktop")
-        compile arcModule("natives:natives-desktop")
-        compile arcModule("natives:natives-freetype-desktop")
-        compile arcModule("backends:backend-headless")
         implementation arcModule(":extensions:packer")
+    }
+}
+project(":annotations") {
+    apply plugin: "java-library"
+    dependencies {
+        implementation 'com.squareup:javapoet:1.12.1'
+        implementation arcModule('arc-core')
+        implementation "com.github.Anuken.Mindustry:annotations:$mindustryVersionAnnotations"
+        implementation "com.github.Anuken.Mindustry:core:$mindustryVersion"
+        implementation "com.github.Anuken.Mindustry:tools:$mindustryVersion"
     }
 }
 task jarAndroid {
@@ -313,9 +264,6 @@ jar {
     from("core/assets/") {
         include "**"
     }
-    doLast {
-//        doExec("python ../../cmp.py")
-    }
 }
 task deploy(type: Jar) {
     dependsOn jarAndroid
@@ -327,5 +275,27 @@ task deploy(type: Jar) {
     doLast {
         delete { delete "$buildDir/libs/${project.archivesBaseName}Desktop.jar" }
         delete { delete "$buildDir/libs/${project.archivesBaseName}Android.jar" }
+    }
+}
+task mjar() {
+    dependsOn "jar"
+    doFirst {
+    }
+    doLast {
+        def intoPath = null
+        if ("classic".equals(modsDirectory)) {
+            intoPath = "${arc.util.OS.getAppDataDirectoryString("Mindustry")}/mods/"
+        } else if (modsDirectory != null) intoPath = modsDirectory;
+        if (intoPath != null) {
+            delete {
+                delete "${intoPath}/${project.archivesBaseName}Desktop.jar"
+            }
+            copy {
+                from "$buildDir/libs/${project.archivesBaseName}Desktop.jar"
+                into intoPath
+            }
+            def time = LocalDateTime.now().format(java.time.format.DateTimeFormatter.ofPattern("yyyy/MM/dd HH:mm:ss"));
+            System.out.println("\tlast build time: ${time}")
+        }
     }
 }
